ecmascript/parser/tests/test262-error-references/fail/ac4ee5fb095faad0.js.stderr
error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/ac4ee5fb095faad0.js:1:28
  |
1 | for (let x, y, z, let = 1;;;) {}
  |                            ^

